evidence_library/EC2/regions/us-west-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0571d229cd42752ac",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-00c42b22ff1e08e08",
            "SecurityGroupArn": "arn:aws:ec2:us-west-1:111111111111:security-group/sg-0571d229cd42752ac",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0571d229cd42752ac"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "a6552074-6791-45a0-a6d1-005f18df7c17",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "a6552074-6791-45a0-a6d1-005f18df7c17",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "960",
            "date": "Fri, 06 Feb 2026 16:25:34 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
